--- a/EmployeeAccessSystem/Views/Employee/Edit.cshtml
+++ b/EmployeeAccessSystem/Views/Employee/Edit.cshtml
@@ -7,10 +7,11 @@
 <div class="container mt-5">
     <h2>Edit Employee</h2>
 
-    <!-- Form -->
     <form asp-action="Edit" method="post">
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <!-- Hidden Id -->
+        <!-- IMPORTANT -->
         <input type="hidden" asp-for="EmployeeId" />
 
         <div class="mb-3">
@@ -26,17 +27,21 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="Department" class="form-label"></label>
-            <input asp-for="Department" class="form-control" />
-            <span asp-validation-for="Department" class="text-danger"></span>
+            <label class="form-label">Department</label>
+            <select asp-for="DepartmentId"
+                    asp-items="ViewBag.Departments"
+                    class="form-select">
+                <option value="0" disabled>-- Select Department --</option>
+            </select>
+            <span asp-validation-for="DepartmentId" class="text-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-warning w-100">Update Employee</button>
+        <button type="submit" class="btn btn-warning w-100">
+            Update Employee
+        </button>
     </form>
 
-    <p class="mt-3">
-        <a asp-action="Index">Back to List</a>
-    </p>
+  
 </div>
 
 @section Scripts {
