--- a/EmployeeAccessSystem/Views/Employee/Create.cshtml
+++ b/EmployeeAccessSystem/Views/Employee/Create.cshtml
@@ -14,6 +14,8 @@
 
 
     <form asp-action="Create" method="post">
+        <div asp-validation-summary="All" class="text-danger mb-3"></div>
+
 
         <div class="mb-3">
             <label asp-for="FullName" class="form-label"></label>
@@ -36,14 +38,23 @@
 
             <span asp-validation-for="DepartmentId" class="text-danger"></span>
         </div>
+       
+
+        <div class="mb-3">
+            <label asp-for="CategoryId" class="form-label">Category</label>
+            <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.Categories">
+                <option value="">-- Select Category --</option>
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+
+
 
 
         <button type="submit" class="btn btn-primary w-100">Add Employee</button>
     </form>
 
-    @* <p class="mt-3">
-        <a asp-action="Index">Back to List</a>
-    </p> *@
+    
 </div>
 
 @section Scripts {
