--- a/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
+++ b/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
@@ -23,10 +23,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-controller="Employee" asp-action="Index">Employee</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Category" asp-action="Index">Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="SubCategory" asp-action="Index">SubCategory</a>
                         </li>
 
                     </ul>
