--- a/EmployeeAccessSystem/Views/SubCategory/Create.cshtml
+++ b/EmployeeAccessSystem/Views/SubCategory/Create.cshtml
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label class="form-label"> Name (Optional)</label>
+                        <label class="form-label"> Name </label>
                         <input asp-for="ServerName" class="form-control" />
                     </div>
 
