--- a/EmployeeAccessSystem/Views/Home/Index.cshtml
+++ b/EmployeeAccessSystem/Views/Home/Index.cshtml
@@ -2,6 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
+<h2>Employee Access System</h2>
+
+<p>Please register or login to continue.</p>
+
+<a class="btn btn-primary" asp-controller="Account" asp-action="Register">
+    Register
+</a>
+
+<a class="btn btn-success" asp-controller="Account" asp-action="Login">
+    Login
+</a>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
