--- a/EmployeeAccessSystem/Views/Category/Create.cshtml
+++ b/EmployeeAccessSystem/Views/Category/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmployeeAccessSystem.Models.Category
 
 @{
-    ViewData["Title"] = "Add Category";
+    ViewData["Title"] = "";
 }
 
 <div class="row justify-content-center mt-3">
