--- a/EmployeeAccessSystem/Views/Category/Index.cshtml
+++ b/EmployeeAccessSystem/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<EmployeeAccessSystem.Models.Category>
 
 @{
-    ViewData["Title"] = "Categories";
+    ViewData["Title"] = "";
 }
 
 @{
