--- a/EmployeeAccessSystem/Views/Employee/Delete.cshtml
+++ b/EmployeeAccessSystem/Views/Employee/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmployeeAccessSystem.Models.Employee
 
 @{
-    ViewData["Title"] = "Delete Employee";
+    ViewData["Title"] = "";
 }
 
 <div class="row justify-content-center">
