--- a/EmployeeAccessSystem/Views/Employee/Details.cshtml
+++ b/EmployeeAccessSystem/Views/Employee/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmployeeAccessSystem.Models.Employee
 
 @{
-    ViewData["Title"] = "Employee Details";
+    ViewData["Title"] = "";
 }
 
 <div class="row justify-content-center mt-3">
