--- a/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
+++ b/EmployeeAccessSystem/Views/Shared/_Layout.cshtml
@@ -1,16 +1,13 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@ViewData["Title"] - EmployeeAccessSystem</title>
 
-  
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EmployeeAccessSystem.styles.css" asp-append-version="true" />
 
-    
     <link rel="stylesheet" href="~/adminlte/plugins/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="~/adminlte/dist/css/adminlte.min.css" />
 
@@ -20,9 +17,7 @@
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
 
-
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-         
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button">
@@ -38,7 +33,6 @@
                 </li>
             </ul>
 
-        
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Employee" asp-action="Index" title="Employees">
@@ -47,9 +41,8 @@
                 </li>
             </ul>
         </nav>
-        <
+
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            
             <a asp-controller="Home" asp-action="Index" class="brand-link">
                 <img src="~/adminlte/dist/img/AdminLTELogo.png"
                      alt="Logo"
@@ -58,9 +51,7 @@
                 <span class="brand-text font-weight-light">EmployeeAccess</span>
             </a>
 
-    
             <div class="sidebar">
-               
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
@@ -94,33 +85,31 @@
 
                     </ul>
                 </nav>
-           
             </div>
-           
         </aside>
 
-
         <div class="content-wrapper">
-          
+
             <div class="content-header">
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">@ViewData["Title"]</h1>
+                            @if (!string.IsNullOrWhiteSpace(ViewData["Title"] as string))
+                            {
+                                <h1 class="m-0">@ViewData["Title"]</h1>
+                            }
                         </div>
                     </div>
                 </div>
             </div>
 
-       
             <section class="content">
                 <div class="container-fluid">
                     @RenderBody()
                 </div>
             </section>
-      
+
         </div>
-       
 
         <footer class="main-footer text-sm">
             <strong>&copy; @DateTime.Now.Year - EmployeeAccessSystem</strong>
@@ -129,16 +118,10 @@
             </div>
         </footer>
     </div>
-   
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-
     <script src="~/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-
     <script src="~/adminlte/dist/js/adminlte.min.js"></script>
-
-  
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
