--- a/EmployeeAccessSystem/Views/SubCategory/Delete.cshtml
+++ b/EmployeeAccessSystem/Views/SubCategory/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmployeeAccessSystem.Models.SubCategory
 
 @{
-    ViewData["Title"] = "Delete SubCategory";
+    ViewData["Title"] = "";
 }
 
 <div class="row justify-content-center mt-3">
