--- a/EmployeeAccessSystem/Views/SubCategory/Edit.cshtml
+++ b/EmployeeAccessSystem/Views/SubCategory/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmployeeAccessSystem.Models.SubCategory
 
 @{
-    ViewData["Title"] = "Edit SubCategory";
+    ViewData["Title"] = "";
 }
 
 <div class="row justify-content-center mt-3">
@@ -38,7 +38,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-primary">Update</button>
-                    <a asp-action="Index" class="btn btn-secondary ml-2">Back</a>
+                    <a asp-action="Index" class="btn btn-secondary ml-2">Cancel</a>
                 </form>
             </div>
 
